--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
 </head>
 
 <body>
-    <h1>Hello </h1>
+    <div class="container">
+        <h1>Counter</h1>
+        <span id="value">0</span>
+        <div class="butoon-container">
+            <button class="btn decrease">decrease</button>
+            <button class="btn reset">Reset</button>
+            <button class="btn increase">Increase</button>
+        </div>
+    </div>
     <!-- javascript -->
     <script src="app.js"></script>
 </body>
